fix for header aligning so late

--- a/css/header.css
+++ b/css/header.css
@@ -221,12 +221,12 @@
 .nav-bar ul > li:nth-child(2):hover a::before {transform: rotate(225deg);}
 
 @media screen and (max-width: 849px) {
-    .logo {
+    /* .logo {
         height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
-    }
+    } */
 
     .nav-bar {
         box-shadow: inset 0px 8px 6px -6px rgba(0, 0, 0, 0.2), 0px 4px 14px -5px rgba(0, 0, 0, 0.3),inset 0px 2px var(--accent);
